<resources>
    <string name="app_name">Dice</string>

    <string name="todo">TODO</string>

    <!--DICE-->
    <string name="dice_previous_roll">Zarul anterior</string>
    <string name="dice_roll">Învârte zarurile</string>
    <string name="dice_shake">… sau dă shake</string>

    <!--HISTORY-->
    <string name="history_title">Istoric</string>
    <string name="empty_history_paragraph">Dă shake sau învârte zarurile, aici vor apărea toate scorurile tale</string>
    <string name="empty_history_title">Nu ai istoric încă</string>

    <!--DIALOG-->
    <string name="dialog_title">Ai dat dublă!</string>
    <string name="dialog_paragraph">Foarte tare! Bravo, mai încearcă până mai dai o dată!</string>
    <string name="dialog_button">Super tare, mersi</string>

</resources>