<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/tv_dialog_title"
            style="@style/AppTheme.Widget.TextView.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/dialog_title" />
        <TextView
            android:id="@+id/tv_dialog_paragraph"
            style="@style/AppTheme.Widget.TextView.Regular"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_paragraph"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
            app:layout_constraintRight_toRightOf="@+id/tv_dialog_title"
            app:layout_constraintLeft_toLeftOf="@id/tv_dialog_title"
            android:textSize="16sp"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_hide_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Widget.MaterialComponents.UnelevatedButton"
            android:text="@string/dialog_button"
            android:background="@color/colorPrimary"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="50dp"
            />


</LinearLayout>