<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:clipToPadding="false"
        android:paddingTop="24dp"
        android:paddingBottom="40dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_nav_back">

        <TextView
            android:id="@+id/tv_title"
            style="@style/AppTheme.Widget.TextView.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            android:textSize="24sp"
            android:visibility="visible" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_empty_history_dice"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="152dp"
        android:layout_height="108dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/illustration_empty_history"
        android:contentDescription="@string/empty_history_title" />
    <TextView
        android:id="@+id/tv_empty_history_title"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        style="@style/AppTheme.Widget.TextView.Regular"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_history_title"/>
    <TextView
        android:id="@+id/tv_empty_history_paragraph"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="28dp"
        style="@style/AppTheme.Widget.TextView.Regular"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/empty_history_paragraph"/>
</FrameLayout>
