<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_history"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:elevation="1dp"
        android:src="@drawable/ic_nav_history"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <View
        android:id="@+id/container_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_dice_history"
        app:layout_constraintBottom_toBottomOf="@id/iv_history"
        app:layout_constraintEnd_toEndOf="@id/iv_history"
        app:layout_constraintStart_toStartOf="@id/tv_previous_roll"
        app:layout_constraintTop_toTopOf="@id/iv_history" />

    <TextView
        android:id="@+id/tv_previous_roll"
        style="@style/AppTheme.Widget.TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:paddingStart="16dp"
        android:text="@string/dice_previous_roll"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/iv_history"
        app:layout_constraintTop_toTopOf="@id/iv_history" />

    <TextView
        android:id="@+id/tv_last_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Widget.TextView.Regular"
        android:text="0-0"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_previous_roll"
        app:layout_constraintRight_toRightOf="@+id/tv_previous_roll"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:src="@drawable/illustration_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_history" />

    <ImageView
        android:id="@+id/iv_first_die"
        android:layout_width="108dp"
        android:layout_height="0dp"
        android:src="@drawable/dice_face_01"
        app:layout_constraintBottom_toTopOf="@id/btn_roll"
        app:layout_constraintEnd_toStartOf="@id/iv_second_die"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_title" />

    <ImageView
        android:id="@+id/iv_second_die"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/dice_face_02"
        app:layout_constraintBottom_toBottomOf="@id/iv_first_die"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_first_die"
        app:layout_constraintTop_toTopOf="@id/iv_first_die" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/first_dice_anim"
        android:layout_width="108dp"
        android:layout_height="108dp"
        app:layout_constraintTop_toTopOf="@+id/iv_first_die"
        app:layout_constraintBottom_toBottomOf="@+id/iv_first_die"
        app:layout_constraintRight_toRightOf="@+id/iv_first_die"
        app:layout_constraintLeft_toLeftOf="@+id/iv_first_die"
        app:lottie_rawRes="@raw/dice_anim_01"
        android:alpha="0"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/second_dice_anim"
        android:layout_width="108dp"
        android:layout_height="108dp"
        app:layout_constraintTop_toTopOf="@+id/iv_second_die"
        app:layout_constraintBottom_toBottomOf="@+id/iv_second_die"
        app:layout_constraintRight_toRightOf="@+id/iv_second_die"
        app:layout_constraintLeft_toLeftOf="@+id/iv_second_die"
        app:lottie_rawRes="@raw/dice_anim_02"
        android:alpha="0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_roll"
        style="@style/AppTheme.Widget.MaterialComponents.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/dice_roll"
        app:layout_constraintBottom_toTopOf="@id/tv_shake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_first_die"
        tools:background="@color/bg_button_primary" />

    <TextView
        android:id="@+id/tv_shake"
        style="@style/AppTheme.Widget.TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/dice_shake"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/ic_shake"
        app:layout_constraintBottom_toTopOf="@id/iv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
